Fixing z-index of crud buttons

--- a/src/internal-packages/crud/styles/document-actions.less
+++ b/src/internal-packages/crud/styles/document-actions.less
@@ -7,6 +7,8 @@
   &-button {
     visibility: hidden;
     transition: none;
+    z-index: 200;
+    position: relative;
   }
 
   &-expand-button {
